--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=Money-Management
 
-server.port = 8000
+server.port = 8080
 
 ## Database Properties
 
-spring.datasource.url = jdbc:postgresql://localhost:5432/capstone
+spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username = postgres
-spring.datasource.password = postgres
+spring.datasource.password = password
 
 
 ## Hibernate Properties
